--- a/portfolio/graphics.html
+++ b/portfolio/graphics.html
@@ -8,11 +8,13 @@
     </head>
     <body>
         <div id="navbar-top">
-            <img 
-                id="logo"
-                src="images/as_logo.png"
-                width="60px"
-            >
+            <a href="index.html">
+                <img 
+                    id="logo"
+                    src="images/as_logo.png"
+                    width="60px"
+                >
+            </a>
         </div>
         <div id="navbar">
             <div class="dropdown-container">
