--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>contact info</title>
         <link href="css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="https://shorturl.at/PKdFx">
     </head>
     <body>
         <div id="navbar-top">
@@ -18,15 +20,42 @@
         </div>
         <div id="navbar">
             <div class="dropdown-container">
-                <a href="#">GALLERY</a>
+                <a href="gallery.html">
+                    GALLERY
+                    <i class="fa-solid fa-sort-down"></i>
+                </a>
                 <div class="dropdown-menu">
                     <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
                 </div>
             </div>
-            <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
+            <a href="about.html">ABOUT</a>
+            <a href="contact.html">CONTACT</a>
+        </div>
+        <div id="contact-container">
+            <img id="pbimg" src="images/pointbear.png">
+            <div id="contact">
+                <div class="email">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>
+                    <p>siersbear@gmail.com</p>
+                </div>
+                <div class="instagram">
+                    <a href="https://www.instagram.com/AaronSiers_GD">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <p>@AaronSiers_GD</p>
+                </div>
+                <div class="linkedin">
+                    <a 
+                        href="https://www.linkedin.com/in/aaron-siers-4230162b4/"
+                    >
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <p>Aaron Siers</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
