--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>resume</title>
         <link href="css/style.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="https://shorturl.at/PKdFx">
     </head>
     <body>
         <div id="navbar-top">
@@ -18,15 +20,18 @@
         </div>
         <div id="navbar">
             <div class="dropdown-container">
-                <a href="#">GALLERY</a>
+                <a href="gallery.html">
+                    GALLERY
+                    <i class="fa-solid fa-sort-down"></i>
+                </a>
                 <div class="dropdown-menu">
                     <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
                 </div>
             </div>
-            <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
+            <a href="about.html">ABOUT</a>
+            <a href="contact.html">CONTACT</a>
         </div>
     </body>
 </html>
