--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -66,5 +66,7 @@
                 </ul>
             </div>
         </div>
+        <hr>
+        <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
 </html>
