--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -34,7 +34,8 @@
             <a href="contact.html">CONTACT</a>
         </div>
         <div id="animations-container">
-            <h2>Nekomancer Cat Walk</h2>
+            <h2>Nekomancers</h2>
+            <img id="nekos" src="images/NEKOMANCY.gif">
             <div id="catanimations">
                 <img src="images/mummy.gif">
                 <img src="images/swiss.gif">
@@ -42,5 +43,7 @@
                 <img src="images/brian.gif">
             </div>
         </div>
+        <hr>
+        <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
 </html>
