--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -38,5 +38,18 @@
             <h1>GALLERY</h1>
         </div>
         <hr>
+        <div id="categories">
+            <a class="graphics" href="graphics.html">
+                Graphics
+            </a>
+            <a class="animation" href="animation.html">
+                Animations
+            </a>
+            <a class="photography" href="photography.html">
+                Photography
+            </a>
+        </div>
+        <hr>
+        <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
 </html>
