--- a/portfolio/message.html
+++ b/portfolio/message.html
@@ -71,6 +71,8 @@
                 <input type="submit" value="Submit">
           
             </form>
-          </div>
+        </div>
+        <hr>
+        <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
 </html>
