--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -57,5 +57,7 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
 </html>
