--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -33,5 +33,7 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
+        <hr>
+        <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
 </html>
