--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -60,6 +60,7 @@
                 <p id="volume">Volume Warning</p>
                 <i class="fa-solid fa-triangle-exclamation"></i>
             </div>
+            <marquee>♥︎ Now playing: Serani Poji - スマイリーを探して♥︎ </marquee>
         </div>
         <div id="centered-column">
             <div class="cards">
