--- a/portfolio/message.html
+++ b/portfolio/message.html
@@ -34,7 +34,7 @@
             <a href="contact.html">CONTACT</a>
         </div>
         <div class="msg-container">
-            <form action="https://getform.io/f/pbqgjklb">
+            <form action="https://getform.io/f/pbqgjklb" method="POST">
           
                 <label for="fname">First Name</label>
                 <input 
