--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -34,6 +34,7 @@
             <a href="contact.html">CONTACT</a>
         </div>
         <div id="animations-container">
+            <img id="bearhead" src="images/bearhead.png">
             <h2>Nekomancers</h2>
             <img id="nekos" src="images/NEKOMANCY.gif">
             <div id="catanimations">
@@ -42,6 +43,25 @@
                 <img src="images/stitches.gif">
                 <img src="images/brian.gif">
             </div>
+            <img id="bearhead" src="images/bearhead.png">
+            <h2>Classwork</h2>
+            <div id="ad"> 
+                <img 
+                    alt="ad 1" 
+                    src="images/PhotoshopAnimation_GDWD_ASiers_V1.gif"
+                >
+                <img 
+                    alt="ad 2" 
+                    src="images/PhotoshopAnimation_GDWD_ASiers_V2.gif"
+                >
+                <img 
+                    alt="ad 3" 
+                    src="images/PhotoshopAnimation_GDWD_ASiers_V3.gif"
+                >
+            </div>
+            <img id="bearhead" src="images/bearhead.png">
+            <h2>Doodles</h2>
+            <img id="cats" src="images/catlovers.gif">
         </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
