--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -33,6 +33,37 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
+        <div id="images">
+            <img id="bearhead" src="images/bearhead.png">
+            <h1>PHOTOGRAPHY</h1>
+            <img 
+                class="photograph"
+                src="images/PhotographyCollage_GDWD103_ASiers_V4.jpg"
+                alt="photo 1"
+            >
+            <div id="productphotography">
+                <img 
+                    class="photograph"
+                    src="images/ProductPhotography_GDWD_ASiers_V2.jpg"
+                    alt="photo 2"
+                >
+                <img 
+                    class="photograph"
+                    src="images/ProductPhotography_GDWD_ASiers_V3.jpg"
+                    alt="photo 3"
+                >
+            </div>
+            <img 
+                class="photograph"
+                src="images/Surreal.jpg"
+                alt="Photo 4"
+            >
+            <img 
+                class="photograph"
+                src="images/Conceptual.jpg"
+                alt="Photo 5"
+            >
+        </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
