--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -49,6 +49,25 @@
                 Photography
             </a>
         </div>
+        <div id="audio3">
+            <audio controls autoplay loop id="lowaudio">
+                <source src="audio/Song5.mp3" type="audio/mpeg">
+            </audio>
+            <script>
+                var audio = document.getElementById("lowaudio");
+                audio.volume = 0.1;
+            </script>
+        </div>
+        <div id="bearhr">
+            <img id="bearhead" src="images/bearhead.png">
+        </div>
+        <div id="homebutton">
+            <a href="index.html">
+                <i class="fa-solid fa-star"></i>
+                <p>HOME</p>
+                <i class="fa-solid fa-star"></i>
+            </a>
+        </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
