--- a/portfolio/graphics.html
+++ b/portfolio/graphics.html
@@ -33,6 +33,27 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
+        <div id="graphics">
+            <a href="classwork.html" id="classwork">
+                <img 
+                    src="images/classwork.gif"
+                    alt="classwork"
+                >
+            </a>
+            <a href="logos.html" id="logos">
+                <img 
+                    src="images/logos.gif"
+                    alt="logos"
+                >
+            </a>
+            <a href="commissions.html" id="commissions">
+                <img 
+                    class="commissionsimg"
+                    src="images/commissions.gif"
+                    alt="commissions"
+                >
+            </a>
+        </div>
         <hr>
         <p id="bottomtext"> © 2024 Aaron Siers</p>
     </body>
