--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,10 @@
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
         <link rel="icon" href="https://shorturl.at/PKdFx">
+        <script>
+            var audio = document.getElementById("lowaudio");
+            audio.volume = 0.1;
+        </script>
     </head>
     <body>
         <div id="navbar-top">
@@ -52,9 +56,13 @@
         <div id="audio">
             <p>Heres some music to listen to if you get bored</p>
             <img src="images/dance.gif">
-            <audio controls autoplay>
+            <audio controls autoplay loop id="lowaudio">
                 <source src="audio/Song2.mp3" type="audio/mpeg">
             </audio>
+            <script>
+                var audio = document.getElementById("lowaudio");
+                audio.volume = 0.1;
+            </script>
             <div id="warning">
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 <p id="volume">Volume Warning</p>
@@ -71,7 +79,11 @@
                 <p> 
                     Check out some of my previous and most recent artwork!
                 </p>
-                <a href="gallery.html">Gallery</a>
+                <a href="gallery.html" id="click">
+                    <i class="fa-solid fa-star"></i>
+                    <p>Gallery</p>
+                    <i class="fa-solid fa-star"></i>
+                </a>
             </div>
             <div class="cards">
                 <img 
@@ -81,7 +93,11 @@
                 <p> 
                     Want to contact me? Heres my info!
                 </p>
-                <a href="contact.html">Contact Info</a>
+                <a href="contact.html" id="click">
+                    <i class="fa-solid fa-star"></i>
+                    <p>Contact Info</p>
+                    <i class="fa-solid fa-star"></i>
+                </a>
             </div>
             <div class="cards">
                 <img 
@@ -91,7 +107,11 @@
                 <p> 
                     Feel free to leave me a message here!
                 </p>
-                <a href="message.html">Message Form</a>
+                <a href="message.html" id="click">
+                    <i class="fa-solid fa-star"></i>
+                    <p>Message Form</p>
+                    <i class="fa-solid fa-star"></i>
+                </a>
             </div>
         </div>
         <hr>
