--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -70,6 +70,7 @@
                                 <li>Ala Flora</li>
                                 <li>Serani Poji</li>
                             </ul>
+                            <img id="beartune" src="images/beartune.gif">
                         </div>
                         <div>
                             <img id="me" src="images/me.gif">
