--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -42,6 +42,7 @@
             <img id="pbimg" src="images/pointbear.png">
             <div id="contact">
                 <div class="email">
+                    <a href="mailto:siersbear@gmail.com">
                         <i class="fa-solid fa-envelope"></i>
                     </a>
                     <p>siersbear@gmail.com</p>
