--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -28,6 +28,7 @@
                     <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
+                    <a href="webgraphics.html">Website Graphics</a>
                 </div>
             </div>
             <a href="about.html">ABOUT</a>
@@ -60,15 +61,45 @@
                                 create artwork that accurately represents me.
                             </p>
                             <p>
+                                I use Adobe applications such as Photoshop and 
+                                Illustrator for illustrations and animations. I 
+                                also used Visual Studio Code and Github to 
+                                create this HTML and CSS coded website.
+                            </p>
+                            <p>
                                 My biggest inspirations include:
                             </p>
                             <ul>
-                                <li>Hakushi Hasegawa</li>
-                                <li>Liz Lehman</li>
-                                <li>Sawako Kageyama</li>
-                                <li>Eddy Atoms</li>
-                                <li>Ala Flora</li>
-                                <li>Serani Poji</li>
+                                <li>
+                                    <a href="https://hakushihasegawa.com/">
+                                        Hakushi Hasegawa
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://thescaryjokes.com/">
+                                        Liz Lehman
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.sawakokageyama.com/">
+                                        Sawako Kageyama
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/eddyatoms/">
+                                        Eddy Atoms
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://alaflora.art/">
+                                        Ala Flora
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.seranipoji.com/">
+                                        Serani Poji
+                                    </a>
+                                </li>
                             </ul>
                             <img id="beartune" src="images/beartune.gif">
                         </div>
