--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -28,6 +28,7 @@
                     <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
+                    <a href="webgraphics.html">Website Graphics</a>
                 </div>
             </div>
             <a href="about.html">ABOUT</a>
@@ -47,6 +48,9 @@
             </a>
             <a class="photography" href="photography.html">
                 Photography
+            </a>
+            <a class="webgraphics" href="webgraphics.html">
+                Website Graphics
             </a>
         </div>
         <div id="audio3">
