--- a/portfolio/graphics.html
+++ b/portfolio/graphics.html
@@ -25,9 +25,9 @@
                     <i class="fa-solid fa-sort-down"></i>
                 </a>
                 <div class="dropdown-menu">
-                    <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
+                    <a href="webgraphics.html">Website Graphics</a>
                 </div>
             </div>
             <a href="about.html">ABOUT</a>
