--- a/portfolio/logos.html
+++ b/portfolio/logos.html
@@ -28,6 +28,7 @@
                     <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
+                    <a href="webgraphics.html">Website Graphics</a>
                 </div>
             </div>
             <a href="about.html">ABOUT</a>
