--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -51,6 +51,11 @@
                                 I turned 20 this year.
                             </p>
                             <p>
+                                I've taken Graphic Design & Photography 
+                                electives from middle school to highschool, and 
+                                I'm currently attending F.I.R.S.T. Institute.
+                            </p>
+                            <p>
                                 I've been drawing since I was young, and as I 
                                 grew up I wanted to improve and make art that 
                                 could impress people.
