--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
-        <marquee>♥︎ Now playing: 倉橋ヨエコ - 友達のうた♥︎ </marquee>
+        <div id="spacer">
+            <marquee>♥︎ Now playing: 倉橋ヨエコ - 友達のうた♥︎ </marquee>
+        </div>
         <div id="card1" class="card">
             <h2>ENTER HERE</h2>
             <div class="card-content">
