--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -19,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
@@ -40,10 +41,10 @@
                     <div id="bio">
                         <div id="biotxt">
                             <div id="title">
+                                <i class="fa-regular fa-star"></i>
                                 <h1>
                                     ABOUT ME
                                 </h1>
-                                <i class="fa-regular fa-star"></i>
                             </div>
                             <p>
                                 My name is Aaron Siers. I'm a filipino trans man 
@@ -78,38 +79,44 @@
                                 <li>
                                     <a href="https://hakushihasegawa.com/">
                                         Hakushi Hasegawa
+                                        <i class="fa-solid fa-music"></i>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://thescaryjokes.com/">
                                         Liz Lehman
+                                        <i class="fa-solid fa-music"></i>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.sawakokageyama.com/">
                                         Sawako Kageyama
+                                        <i class="fa-solid fa-paintbrush"></i>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.instagram.com/eddyatoms/">
                                         Eddy Atoms
+                                        <i class="fa-solid fa-paintbrush"></i>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://alaflora.art/">
                                         Ala Flora
+                                        <i class="fa-solid fa-paintbrush"></i>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://www.seranipoji.com/">
                                         Serani Poji
+                                        <i class="fa-solid fa-music"></i>
                                     </a>
                                 </li>
                             </ul>
                             <img id="beartune" src="images/beartune.gif">
                         </div>
                         <div>
-                            <img id="me" src="images/me.gif">
+                            <img id="me" src="images/persona.gif">
                         </div>
                     </div>
                 </div>
