--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -19,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
