--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -19,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
@@ -38,6 +39,9 @@
             <img id="animation" src="images/headeranimation.gif">
             <h1>GALLERY</h1>
         </div>
+        <marquee id="bearwalk">
+            <img src="images/bearwalk.gif">
+        </marquee>
         <hr>
         <div id="categories">
             <a class="graphics" href="graphics.html">
