--- a/portfolio/graphics.html
+++ b/portfolio/graphics.html
@@ -19,12 +19,14 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
                     <i class="fa-solid fa-sort-down"></i>
                 </a>
                 <div class="dropdown-menu">
+                    <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
                     <a href="webgraphics.html">Website Graphics</a>
