--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,10 +7,6 @@
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
         <link rel="icon" href="https://shorturl.at/PKdFx">
-        <script>
-            var audio = document.getElementById("lowaudio");
-            audio.volume = 0.1;
-        </script>
     </head>
     <body>
         <div id="navbar-top">
@@ -23,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
@@ -69,7 +66,12 @@
                 <p id="volume">Volume Warning</p>
                 <i class="fa-solid fa-triangle-exclamation"></i>
             </div>
-            <marquee>♥︎ Now playing: Serani Poji - スマイリーを探して♥︎ </marquee>
+            <marquee>
+                ♥︎ Now playing: Serani Poji - スマイリーを探して♥︎
+            </marquee>
+            <marquee id="walk">
+                <img src="images/bearwalk.gif">
+            </marquee>
         </div>
         <div id="centered-column">
             <div class="cards">
