--- a/portfolio/logos.html
+++ b/portfolio/logos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>photography</title>
+        <title>logos</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
         <link rel="icon" href="https://shorturl.at/PKdFx">
@@ -19,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
