--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -19,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
@@ -27,6 +28,7 @@
                 <div class="dropdown-menu">
                     <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
+                    <a href="photography.html">Photography</a>
                     <a href="webgraphics.html">Website Graphics</a>
                 </div>
             </div>
