--- a/portfolio/webgraphics.html
+++ b/portfolio/webgraphics.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>animation</title>
+        <title>web graphics</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
         <link rel="icon" href="https://shorturl.at/PKdFx">
@@ -19,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
@@ -28,6 +29,7 @@
                     <a href="graphics.html">Graphics</a>
                     <a href="animation.html">Animation</a>
                     <a href="photography.html">Photography</a>
+                    <a href="webgraphics.html">Website Graphics</a>
                 </div>
             </div>
             <a href="about.html">ABOUT</a>
@@ -40,6 +42,8 @@
                 <img src="images/beartune.gif">
                 <img src="images/dance.gif">
                 <img src="images/loop.gif">
+                <img src="images/bearwalk.gif">
+                <img src="images/persona.gif">
             </div>
         </div>
         <div id="audio3">
