--- a/portfolio/commissions.html
+++ b/portfolio/commissions.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>photography</title>
+        <title>commissions</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
         <link rel="icon" href="https://shorturl.at/PKdFx">
@@ -19,6 +19,7 @@
             </a>
         </div>
         <div id="navbar">
+            <a href="blog.html">BLOG</a>
             <div class="dropdown-container">
                 <a href="gallery.html">
                     GALLERY
@@ -33,7 +34,7 @@
             </div>
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
-        </div>
+        </div> 
         <div id="images">
             <img id="bearhead" src="images/bearhead.png">
             <h1>COMMISSIONS</h1>
