--- a/portfolio/webgraphics.html
+++ b/portfolio/webgraphics.html
@@ -44,6 +44,7 @@
                 <img src="images/loop.gif">
                 <img src="images/bearwalk.gif">
                 <img src="images/persona.gif">
+                <img src="images/me.gif">
             </div>
         </div>
         <div id="audio3">
