--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -66,6 +66,7 @@
             <div id="doodles">
                 <img id="cats" src="images/catlovers.gif">
                 <img id="spin" src="images/ok.gif">
+                <img id="cry" src="images/expression.gif">
             </div>
         </div>
         <div id="audio3">
