--- a/portfolio/error.html
+++ b/portfolio/error.html
@@ -6,7 +6,7 @@
         <title>ERROR 404</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="https://shorturl.at/PKdFx">
+        <link rel="icon" href="https://media.discordapp.net/attachments/922010128721534976/1247653170419728484/image.png?ex=6664c390&is=66637210&hm=9c5a7d3e30bfb2fada314bcf9425d7927df18183710aba4c8822e4c571a07655&=&format=webp&quality=lossless&width=683&height=683">
     </head>
     <body>
         <div id="navbar-top">
@@ -35,7 +35,7 @@
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
         </div>
-        <div id="card1" class="card">
+        <div id="card2" class="card">
             <h2>ERROR 404</h2>
             <div class="card-content">
                 <p>
