--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -6,7 +6,7 @@
         <title>photography</title>
         <link href="css/style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/4189cca588.js" crossorigin="anonymous"></script>
-        <link rel="icon" href="https://shorturl.at/PKdFx">
+        <link rel="icon" href="https://media.discordapp.net/attachments/922010128721534976/1247653170419728484/image.png?ex=6664c390&is=66637210&hm=9c5a7d3e30bfb2fada314bcf9425d7927df18183710aba4c8822e4c571a07655&=&format=webp&quality=lossless&width=683&height=683">
     </head>
     <body>
         <div id="navbar-top">
@@ -43,6 +43,11 @@
                 src="images/PhotographyCollage_GDWD103_ASiers_V4.jpg"
                 alt="photo 1"
             >
+            <img 
+            class="photograph"
+            src="images/MattePainting_GDWD103_ASiers_V4.jpg"
+            alt="Photo 4"
+        >
             <div id="productphotography">
                 <img 
                     class="photograph"
